--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -29,8 +29,26 @@
 \let\ps@plain\ps@fancy
 \makeatother
 
-\begin{document}
+\hypersetup{
+    pdftitle={Mini-projet de C++: Google Hashcode 2016},%
+    pdfauthor={Equipe 13},%
+    pdfsubject={C++},%
+    pdfcreator={LaTeX},
+    pdfproducer={Equipe 13},
+    pdfkeywords={equipe 13, c++, hashcode, 2016}
+}
 
+
+\begin{document}
+	\begin{center}
+	\noindent\makebox[\textwidth][c]{%
+	\begin{minipage}[t]{0.7\textwidth}
+	  \begin{flushleft}
+	    \includegraphics [width=100mm]{images/poly.png} \\[0.5cm]
+	  \end{flushleft}
+	\end{minipage}}
+	\end{center}
+	\let\newpage\relax%
 	\maketitle
 	
 	Ce projet pose un problème complexe, qui demande une certaine réflexion pour arriver à un résultat donnant un score élevé. Il faut également faire attention à la façon d'implémenter la méthode de résolution, pour que le traitement se fasse le plus rapidement possible. Cela conduit à faire des choix de modélisation, qui ont une grande influence sur les algorithmes développés et donc sur le temps de calcul.
@@ -75,7 +93,7 @@
 		    \hline
 		\end{tabularx}
 		\normalsize
-				
+
 		% subsection résultats (end)
 
 \end{document}
