--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -94,14 +94,20 @@
 		\footnotesize
 		\hspace*{-1cm}\noindent\begin{tabularx}{16cm}{|l|p{4cm}|X|p{2cm}|r|}
 			\hline
-			 & \textbf{Jeu de donnée} & \textbf{Temps} & \textbf{Score} & \textbf{Pourcentage} \\
+			 & \textbf{Jeu de données} & \textbf{Temps} & \textbf{Score} & \textbf{Pourcentage} \\
 			\hline
 		    \cellcolor{blue!25} Algorithme 1 & & & & \\
 		    \cellcolor{blue!25} & forever\_alone & X secondes & 44000 & 35.5 \\
 		    \cellcolor{blue!25} & constellation & X secondes & 44000 & 35.5 \\
 		    \cellcolor{blue!25} & overlap & X secondes & 44000 & 35.5 \\
-		    \cellcolor{blue!25} & weekdend & X secondes & 44000 & 35.5 \\
+		    \cellcolor{blue!25} & weekend & X secondes & 44000 & 35.5 \\
 		    \hline
+				\cellcolor{yellow!25} Algorithme Ratio & & & & \\
+		    \cellcolor{yellow!25} & forever\_alone & X secondes & 48000 & 34.44 \\
+		    \cellcolor{yellow!25} & constellation & X secondes & 64313 & 2.15 \\
+		    \cellcolor{yellow!25} & overlap & X secondes & 14114 & 1.21 \\
+		    \cellcolor{yellow!25} & weekend & X secondes & 50612 & 0.75 \\
+				\hline
 		    \cellcolor{red!25} Meilleurs résultats & & & & \\
 		    \cellcolor{red!25} & forever\_alone & X secondes & 44000 & 35.5 \\
 		    \cellcolor{red!25} & constellation & X secondes & 44000 & 35.5 \\
