--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -106,7 +106,9 @@
 		\\
 		\\
 		Concernant l'implémentation, chaque satellite va disposer de ces deux vecteurs:
-		\includegraphics [width=100mm]{images/ex1.png} \\[0.7cm]
+		\begin{center}
+		\includegraphics [width=100mm]{images/ex1.png} \\[0.5cm]
+		\end{center}
 		Un vecteur de vecteur de photos, qui va contenir le vecteur de toutes les photos qui peuvent être prise par le satelitte tour par tour et un vecteur qui va indiquer les vecteurs non vide du précédent tableau.
 		\\
 		Une fois cela fait, on va commencer une simulation ou pour chaque satellite, on va faire l'ensemble des tours, et on va choisir quelle photo il prend plutôt qu'une autre en fonction du ratio.
