--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -163,11 +163,23 @@
 	Le but de l'arbitre était notamment de vérifier que les fichiers de sortie étaient conformes aux règles et aux contraintes énoncées dans le problème. C'est à dire de vérifier que les photos prises par les satellites au tour T pouvaient effectivement être prise en tenant compte de la position du satellite à cet instant, et de l'orientation possible de la caméra. Il faut ensuite valider les collections de photos en tenant compte du moment où la photo a été prise et si ce moment permet de valider la photo. Pour cela l'arbitre dispose de deux vecteurs : l'un contenant les photos prises, l'autre les collections que l'on veut compléter. L'arbitre dispose également d'un dictionnaire recensant les satellites disponibles. 
 	Les collections disposent d'un vecteur de photos, et d'un vecteur d'intervalles ou ces photos peuvent être prise. 
 	Lorsque l'arbitre vérifie la validité d'une photo, il commence par valider le fait qu'elle a pu être prise par le satellite en comparant ses coordonnées avec les coordonnées du satellite correspondant à l'instant t(calcul à partir de la position initiale du satellite, pas de stockage des positions des satellites). Ensuite il va comparer cette photo avec les photos des collections en itérant sur chaque collection , qui appelle une fonction qui itère sur chaque photo qu'elle contient. 
+	L'arbitre calcule finalement le score obtenu à partir du fichier de sortie correspondant à un algorithme de résolution.
 	\subsection{Points à optimiser}
 	\label{subsection:points_a_optimiser}
 
-	L'accès aux satellites correspondants aux photos prises se fait directement grâce à l'index sur l'id du satellite (clé du map). Sur ce point là, les performances sont bonnes.
-	Par contre on dépense beaucoup d'énergie lors de la vérification de l'appartenance d'une photo à une collection. L'accès se fait en O(n) puisque c'est un vecteur. En utilisant par exemple un multiset en prenant comme critère de comparaison la latitude de la photo (plusieurs éléments possibles de l'arbre ayant la même latitude), la recherche serait plus rapide O(log(n)). De plus en prenant comme clé la longitude, on diminuerait en moyenne le nombre d'éléments ayant la même clé (plus de valeurs possibles en longitude qu'en latitude). 
+	L'accès aux satellites correspondants aux photos prises se fait directement grâce à l'index sur l'id du satellite (clé du map). Sur ce point là, les performances sont bonnes, la validation étant en O(1). 
+	Par contre on dépense beaucoup d'énergie lors de la vérification de l'appartenance d'une photo à une collection. L'accès se fait en O(n) puisque c'est un vecteur. En utilisant par exemple un multiset en prenant comme critère de comparaison la latitude de la photo (plusieurs éléments possibles de l'arbre ayant la même latitude), la recherche serait plus rapide O(log(n)). De plus en prenant comme clé la longitude, on diminuerait en moyenne le nombre d'éléments ayant la même clé (plus de valeurs possibles en longitude qu'en latitude). De la même manière pour les intervalles, c'est un conteneur dont on sert uniquement pour de la recherche d'élements. Un set ayant comme clé par exemple le début de l'intervalle pourrait accélerer la recherche.
+	Concernant le fait que des collections possèdent des photos en communs, on pourrait essayer de gagner du temps en construisant des outils permettant de valider en une fois les collections contenant une photo en commun lors de la vérification de la photo.
+
+	\section{Mesure des temps d'exécution}
+	\label{section:mesure_des_temps_d_execution}
+
+	En se servant de l'arbitre présenté ci dessous et des différents algorithmes de résolution, nous devions comparer ces algorithmes en termes de temps d'éxecution et de score, pour en faire un tableau présentant ces résultats. Néanmoins, seule la partie concernant la mesure des temps d'exécution a été réalisée. Cet exécutable parcourt tous les exécutables du répertoire courant et renvoie le temps d'exécution dans la console.
+
+	\subsection{Limites de la réponse au problème}
+	\label{subsection:travail_pas_fait}
+
+	La solution aurait du prendre en paramètre un argument contenant le dossier à analyser avec les exécutables à tester et un autre argument avec le nom du fichier ou écrire ces résultats. 
 	% subsection résultats (end)
 	
 	% subsection limites_de_l_algorithme (end)
